Fix: update button padding on mobile screen

--- a/styles/index.css
+++ b/styles/index.css
@@ -108,7 +108,7 @@
         /* padding: 0; */
     }
 
-    .side-bar a {
+    a {
         padding: 5px 12px;
     }
 
